# analysing

./: README.md  analysing.cabal  stack.yaml
src/: Main.hs
